[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://person/person.tscn" type="PackedScene" id=2]
[ext_resource path="res://soundmanager/soundmanager.gd" type="Script" id=3]
[ext_resource path="res://door/door.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/loose.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/win.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/button_pressed.png" type="Texture" id=8]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Root" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )

[node name="Button Container" type="VBoxContainer" parent="CanvasLayer/Root"]
anchor_left = 0.04
anchor_top = 0.6
anchor_right = 0.04
anchor_bottom = 0.6
margin_top = -26.0
margin_right = 30.0
margin_bottom = 26.0
alignment = 1

[node name="PushButton" type="Button" parent="CanvasLayer/Root/Button Container"]
margin_top = 2.0
margin_right = 30.0
margin_bottom = 24.0
text = "Push"

[node name="PullButton" type="Button" parent="CanvasLayer/Root/Button Container"]
margin_top = 28.0
margin_right = 30.0
margin_bottom = 50.0
text = "Pull"

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/Root"]
anchor_left = 0.04
anchor_top = 0.04
anchor_right = 0.96
anchor_bottom = 0.3
margin_bottom = -2.2
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 9, 9 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Root/NinePatchRect"]
unique_name_in_owner = true
anchor_left = 0.96
anchor_top = 0.5
anchor_right = 0.96
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -7.0
margin_bottom = 7.0
text = "Score: 0"
align = 2
valign = 1

[node name="HighScoreLabel" type="Label" parent="CanvasLayer/Root/NinePatchRect"]
unique_name_in_owner = true
anchor_left = 0.04
anchor_top = 0.5
anchor_right = 0.04
anchor_bottom = 0.5
margin_top = -6.5
margin_right = 40.0
margin_bottom = 6.5
text = "High: 0"
valign = 1

[node name="SoundManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Win" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 7 )

[node name="Loose" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 6 )

[node name="Person" parent="." instance=ExtResource( 2 )]
camera_path = NodePath("../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Doors" type="Node2D" parent="."]

[node name="Door0" parent="Doors" instance=ExtResource( 4 )]
unique_name_in_owner = true
camera_path = NodePath("../../Camera2D")

[node name="Door1" parent="Doors" instance=ExtResource( 4 )]
unique_name_in_owner = true
camera_path = NodePath("../../Camera2D")

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/Root/Button Container/PushButton" to="." method="_on_PushButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Root/Button Container/PullButton" to="." method="_on_PullButton_pressed"]
